Footer alignment issue is fixed

--- a/client/src/components/CSS/Category.css
+++ b/client/src/components/CSS/Category.css
@@ -3,7 +3,7 @@
    flex-direction: column;
    align-items: center;
    justify-content: center;
-   margin: 0 10px 50px 10px;
+   margin: 0 10px 0 10px;
 }
 
 .category-items-container {
@@ -119,7 +119,7 @@
 
 @media only screen and (min-device-width: 660px) {
    .category-wrapper {
-      margin: 10px 10px 100px 10px;
+      margin: 10px 10px 160px 10px;
    }
    .category-title {
       font-size: 30px;
