--- a/client/src/components/CSS/Fastenings.css
+++ b/client/src/components/CSS/Fastenings.css
@@ -3,7 +3,7 @@
    flex-direction: column;
    align-items: center;
    justify-content: center;
-   margin: 0 10px 50px 10px;
+   margin: 0 10px 0 10px;
 }
 
 .fastenings-title {
@@ -94,7 +94,7 @@
 
 @media only screen and (min-device-width: 660px) {
    .fastenings-wrapper {
-      margin: 10px 10px 100px 10px;
+      margin: 10px 10px 160px 10px;
    }
 
    .fastenings-title {
