--- a/client/src/components/CSS/Footer.css
+++ b/client/src/components/CSS/Footer.css
@@ -1,14 +1,12 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500&display=swap');
-
-
 .footer-wrapper {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
    background-color: #ffffff;
-   margin: 30px 0 20px 0;
+   /* margin: 30px 0 0 0; */
    padding: 10px;
+   height: 110px;
    /* width: 100%; */
    bottom: 0;
    flex-wrap: wrap;
@@ -24,7 +22,6 @@
    text-align: center;
    /* margin: auto; */
    color: #000000;
-   font-family: 'Montserrat', sans-serif;
    text-decoration: none;
    font-size: 3vw;
    color: #edeae4;
@@ -59,35 +56,27 @@
 }
 
 @media only screen and (min-device-width: 660px) {
+   .footer-wrapper {
+      position: fixed;
+      margin: 30px 30px 0 30px;
+      flex-direction: row;
+      justify-content: space-around;
+      width: 100%;
+      bottom: 0;
+   }
+
    .footer-social,
-   .footer-copyrights,
    .footer-admin,
    .footer-social a,
-   .footer-copyrights a,
    .footer-admin a {
       font-size: 15px;
    }
-}
 
-@media only screen and (min-device-width: 660px) {
    .footer-logo {
       display: block;
       height: 100px;
       width: auto;
       margin-left: -20px;
-   }
-
-   .footer-wrapper {
-      display: flex;
-      flex-direction: row;
-      justify-content: space-around;
-      align-items: center;
-      background-color: #ffffff;
-      /* margin: 0 30px 0 30px; */
-
-      width: 100%;
-      bottom: 0;
-      /* position: fixed; */
    }
 
    .footer-copyrights {
@@ -119,7 +108,7 @@
    .footer-wrapper {
       justify-content: space-between;
       align-items: center;
-      position: relative;
+      /* position: relative; */
       bottom: 0;
       width: 90%;
    }
@@ -130,9 +119,15 @@
       margin-right: auto;
    }
 }
-@media only screen and (min-device-width: 660px) and (min-device-height: 900px) {
+/* @media only screen and (min-device-width: 660px) and (min-device-height: 900px) {
    .footer-wrapper {
       bottom: 0;
+      position: fixed;
+   }
+} */
+
+@media only screen and (min-device-height: 1300px) {
+   .footer-wrapper {
       position: fixed;
    }
 }
