--- a/client/src/components/CSS/Results.css
+++ b/client/src/components/CSS/Results.css
@@ -4,7 +4,7 @@
    align-items: center;
    justify-content: center;
    overflow: hidden;
-   margin: 0 10px 50px 10px;
+   margin: 0 10px 0 10px;
 }
 
 .results-title {
@@ -104,7 +104,7 @@
 
 @media only screen and (min-device-width: 660px) {
    .results-wrapper {
-      margin: 10px 10px 100px 10px;
+      margin: 10px 10px 160px 10px;
    }
 
    .results-main-container {
